--- a/flexbox CSS/flexbox_grid/index.html
+++ b/flexbox CSS/flexbox_grid/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <div class="layout">
-        <div class="child">a</div>
-        <div class="child">a</div>
-        <div class="child">a</div>
-        <div class="child">a</div>
-        <div class="child">a</div>
-        <div class="child">a</div>
-        <div class="child">a</div>
+        <div class="child">1</div>
+        <div class="child">2</div>
+        <div class="child">3</div>
+        <div class="child">4</div>
+        <div class="child">5</div>
+        <div class="child">6</div>
+        <div class="child">7</div>
     </div>
 </body>
 
