--- a/Grid/pluralsight/Building_Layouts_w_CSS_Grid/index.html
+++ b/Grid/pluralsight/Building_Layouts_w_CSS_Grid/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -38,6 +39,41 @@
             </div>
             <img src="./images/mountain.jpg" id="mountain">
         </section>
+        
+        <section id="info">
+            <div id="content2">
+                <h2>Reinvention</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi adipisci delectus similique,
+                    expedita
+                    ipsa ducimus consectetur provident obcaecati itaque assumenda, qui numquam, veniam quod?
+                    Perspiciatis
+                    aspernatur numquam explicabo nostrum ea?</p>
+            </div>
+            <img src="./images/vector-mountains.svg" id="mountain-vector">
+        </section>
+
+        <ul id="features">
+            <li>
+                <i class="fa fa-id-card" aria-hidden="true"></i>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+            <li>
+                <i class="fa fa-id-card" aria-hidden="true"></i>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+            <li>
+                <i class="fa fa-id-card" aria-hidden="true"></i>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+            <li>
+                <i class="fa fa-id-card" aria-hidden="true"></i>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+            <li>
+                <i class="fa fa-id-card" aria-hidden="true"></i>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+        </ul>
     </div>
     <footer>
         <p>My footer bar</p>
